# conan2-training

./: .gitignore  CMakeLists.txt  conanfile.py
src/: main.cpp  my_class.cpp  my_class.h
test_package/: CMakeLists.txt  conanfile.py
tests/: CMakeLists.txt
tests/unit/: my_class_test.cpp
